<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_car"
            android:title="@string/cars" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_poll"
            android:title="@string/logs" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_input"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
